# B-BOT

./: .gitignore  LICENSE  Progress.md  README.md  pc-wifi-keyboard-control-plan.md  platformio.ini  yahboom-camera-ros2-guide.md  yahboom-wifi-mediapipe-plan.md
Report/: .gitignore  Final_Report_Outline.md  extract_handbook.py  extract_pdfs.py  main.tex  mainzh.tex  references.bib  要求总结与自查表.md
Report/appendices/: README.md
Report/guidelines/: handbook.txt
Report/planning/: 80plus_statistical_rigour_upgrade_plan.md  D2_Experiment_Plan.md  Experiment_Data_Collection.md  Experimental_Design.md  Final_Report_Outline.md  Project_Management_Gantt_and_Weekly_Log.md  render_project_gantt.py  要求总结与自查表.md
Report/presentation/: B-BOT_final_presentation.pptx  README.md  make_presentation.py  presentation_script.md  qa_preparation.md
Report/workspace/: report_draft.md  实验数据实测替换清单.md  思路.md  技术细节.md
Report/学校要求_文本/: Composite Exams List MAY2026.txt  Sample(1).txt
host/: README_vision.md
host/ros2_ws/src/wheeleg_vision_bridge/: package.xml  setup.cfg  setup.py
host/ros2_ws/src/wheeleg_vision_bridge/config/: config.yaml
host/ros2_ws/src/wheeleg_vision_bridge/launch/: bridge.launch.py
host/ros2_ws/src/wheeleg_vision_bridge/wheeleg_vision_bridge/: bridge_node.py  command_encoder.py  debouncer.py  mediapipe_runner.py  transport.py
host/scripts/: camera_quickstart.sh
host/tools/: camera_preview.py  keyboard_drive.py
include/: ctrl.h  serial.h  wifi_cmd.h  wifi_config.example.h  wifi_config.h
src/: ctrl.cpp  main.cpp  serial.cpp  wifi_cmd.cpp
(+122 files in other folders)
